--- a/frontend/partials/config.html
+++ b/frontend/partials/config.html
@@ -9,13 +9,13 @@
 
 	<div class="gf-form max-width-30">
 		<span class="gf-form-label width-7">Database</span>
-		<input type="text" class="gf-form-input" ng-model='ctrl.current.secureJsonData.database' placeholder="database name" required></input>
+		<input type="text" class="gf-form-input" ng-model='ctrl.current.jsonData.database' placeholder="database name" required></input>
 	</div>
 
 	<div class="gf-form-inline">
 		<div class="gf-form max-width-15">
 			<span class="gf-form-label width-7">User</span>
-			<input type="text" class="gf-form-input" ng-model='ctrl.current.secureJsonData.user' placeholder="user"></input>
+			<input type="text" class="gf-form-input" ng-model='ctrl.current.jsonData.user' placeholder="user"></input>
 		</div>
 		<div class="gf-form max-width-15" ng-if="!ctrl.current.secureJsonFields.password">
 			<span class="gf-form-label width-7">Password</span>
