--- a/frontend/partials/query.editor.html
+++ b/frontend/partials/query.editor.html
@@ -7,6 +7,13 @@
     </div>
   </div>
 
+  <div class="gf-form">
+    <label class="gf-form-label query-keyword">Format as</label>
+    <div class="gf-form-select-wrapper">
+      <select class="gf-form-input gf-size-auto" ng-model="ctrl.target.format" ng-options="f.value as f.text for f in ctrl.formats" ng-change="ctrl.refresh()"></select>
+    </div>
+  </div>
+
   <div class="gf-form"  ng-show="ctrl.showHelp">
     <pre class="gf-form-pre alert alert-info">Time series:
 - return column named <i>time</i> (UTC in seconds or timestamp)
