--- a/frontend/partials/query.editor.html
+++ b/frontend/partials/query.editor.html
@@ -30,15 +30,17 @@ Table:
 
 Macros:
 - $__time(column) -&gt; column as "time"
-- $__timeEpoch -&gt; extract(epoch from column) as "time" (NOT YET IMPLEMENTED)
 - $__timeFilter(column) -&gt; column BETWEEN '2017-04-21T05:01:17Z' AND '2017-04-21T05:01:17Z'
+- $__expandMultiString(variable) -&gt; expand single/multi-select variable so it can be used inside of 'IN' predicate
+- $__timeFrom() -&gt;  '2017-04-21T05:01:17Z'
+- $__timeTo() -&gt;  '2017-04-21T05:01:17Z'
+
+NOT IMPLEMENTED:
+- $__timeEpoch -&gt; extract(epoch from column) as "time" (NOT YET IMPLEMENTED)
 - $__unixEpochFilter(column) -&gt;  column &gt;= 1492750877 AND column &lt;= 1492750877 (NOT YET IMPLEMENTED)
 - $__timeGroup(column,'5m'[, fillvalue]) -&gt; (extract(epoch from column)/300)::bigint*300 (NOT YET IMPLEMENTED)
       by setting fillvalue grafana will fill in missing values according to the interval
       fillvalue can be either a literal value, NULL or previous; previous will fill in the previous seen value or NULL if none has been seen yet
-- $__timeGroupAlias(column,'5m') -&gt; (extract(epoch from column)/300)::bigint*300 AS "time" (NOT YET IMPLEMENTED)
-- $__unixEpochGroup(column,'5m') -&gt; floor(column/300)*300 (NOT YET IMPLEMENTED)
-- $__unixEpochGroupAlias(column,'5m') -&gt; floor(column/300)*300 AS "time" (NOT YET IMPLEMENTED)
 
 Example of group by and order by with $__timeGroup:
 SELECT
@@ -46,13 +48,14 @@ SELECT
   sum(value) as value
 FROM yourtable
 GROUP BY time
-ORDER BY time
+ORDER BY time      
 
-Or build your own conditionals using these macros which just return the values:
-- $__timeFrom() -&gt;  '2017-04-21T05:01:17Z'
-- $__timeTo() -&gt;  '2017-04-21T05:01:17Z'
+- $__timeGroupAlias(column,'5m') -&gt; (extract(epoch from column)/300)::bigint*300 AS "time" (NOT YET IMPLEMENTED)
+- $__unixEpochGroup(column,'5m') -&gt; floor(column/300)*300 (NOT YET IMPLEMENTED)
+- $__unixEpochGroupAlias(column,'5m') -&gt; floor(column/300)*300 AS "time" (NOT YET IMPLEMENTED)
 - $__unixEpochFrom() -&gt;  1492750877
 - $__unixEpochTo() -&gt;  1492750877
+
     </pre>
   </div>
 
