edited the help to denote that the unixepoch macro is supported

--- a/frontend/partials/query.editor.html
+++ b/frontend/partials/query.editor.html
@@ -37,7 +37,7 @@ Macros:
 
 NOT IMPLEMENTED:
 - $__timeEpoch -&gt; extract(epoch from column) as "time" (NOT YET IMPLEMENTED)
-- $__unixEpochFilter(column) -&gt;  column &gt;= 1492750877 AND column &lt;= 1492750877 (NOT YET IMPLEMENTED)
+- $__unixEpochFilter(column) -&gt;  column &gt;= 1492750877 AND column &lt;= 1492750877
 - $__timeGroup(column,'5m'[, fillvalue]) -&gt; (extract(epoch from column)/300)::bigint*300 (NOT YET IMPLEMENTED)
       by setting fillvalue grafana will fill in missing values according to the interval
       fillvalue can be either a literal value, NULL or previous; previous will fill in the previous seen value or NULL if none has been seen yet
